# device_board_hisilicon

./: LICENSE  OAT.xml  README.md
hispark_aries/: BUILD.gn  README_zh.md  ohos.build
hispark_aries/liteos_a/: BUILD.gn  config.gni
hispark_aries/liteos_a/board/: BUILD.gn
hispark_aries/liteos_a/drivers/: BUILD.gn  Kconfig
hispark_aries/uboot/: Makefile
hispark_aries/uboot/secureboot_release/: Makefile  aeskey2reg.c  create_secure_boot.sh  hash_modify.c  rsa2048pem.sh  rsa4096pem.sh
hispark_aries/uboot/secureboot_release/ddr_init/: Makefile  mkddrinit.sh
hispark_aries/uboot/secureboot_release/ddr_init/boot/: Makefile  init_regs.c
hispark_pegasus/: README_zh.md  ohos.build
hispark_pegasus/liteos_m/: config.gni
hispark_phoenix/: README_zh.md  device.gni
hispark_phoenix/docs/: deveco.ini  ide_hiburn_for_3.1-release.md
hispark_phoenix/linux/: BUILD.gn  ohos.build
hispark_phoenix/linux/boot/: BUILD.gn  dtbo.img  logo.img  panel.img
hispark_phoenix/linux/conf/: BUILD.gn  system_image_conf.txt  userdata_image_conf.txt  vendor_image_conf.txt
hispark_phoenix/linux/system/: BUILD.gn  Hi3751V350-slaveboot-emmc.xml
hispark_phoenix/linux/system/cfg/: init.Hi3751V350.cfg  ohos_drv_mgr.cfg
hispark_phoenix/linux/updater/: BUILD.gn  ohos.its  ohos_updater.its
hispark_phoenix/linux/updater/cfg/: fstab.Hi3751V350
hispark_phoenix/peripherals/bluetooth/: Makefile
hispark_phoenix/peripherals/bluetooth/rtkbt/: BUILD.gn
hispark_phoenix/peripherals/bluetooth/rtkbt/Firmware/BT/: fw_info.txt
hispark_phoenix/peripherals/bluetooth/rtkbt/code/libbt-vendor/include/: bt_hci_bdroid.h  bt_list.h  bt_skbuff.h  bt_vendor_rtk.h  hardware.h  hci_h5_int.h  rtk_btservice.h  rtk_common.h  rtk_hcidefs.h  rtk_parse.h  rtk_poll.h  rtk_socket.h  unused.h  upio.h  userial.h  userial_vendor.h
hispark_phoenix/peripherals/bluetooth/rtkbt/code/libbt-vendor/include/utils/: Log.h
hispark_phoenix/peripherals/bluetooth/rtkbt/code/libbt-vendor/src/: bt_list.c  bt_skbuff.c  bt_vendor_rtk.c  hardware.c  hardware_uart.c  hardware_usb.c  hci_h5.c  rtk_btservice.c  rtk_btsnoop_net.c  rtk_heartbeat.c  rtk_parse.c  rtk_poll.c  rtk_socket.c  upio.c  userial_vendor.c
hispark_phoenix/peripherals/bluetooth/rtkbt/code/rtkcmd/: rtkcmd.c
hispark_taurus/: BUILD.gn  README_zh.md  device.gni  ohos.build
hispark_taurus/audio_drivers/: Makefile
hispark_taurus/audio_drivers/codec/hi3516/include/: hi3516_codec_impl.h  hi3516_codec_ops.h
hispark_taurus/audio_drivers/codec/hi3516/src/: hi3516_codec_adapter.c  hi3516_codec_impl.c  hi3516_codec_ops.c
hispark_taurus/audio_drivers/codec/tfa9879/include/: tfa9879_codec_ops.h
hispark_taurus/audio_drivers/codec/tfa9879/src/: tfa9879_codec_adapter.c  tfa9879_codec_ops.c
hispark_taurus/audio_drivers/dsp/include/: dsp_ops.h
hispark_taurus/audio_drivers/dsp/src/: dsp_adapter.c  dsp_ops.c
hispark_taurus/audio_drivers/soc/include/: hi3516_aiao_impl.h  hi3516_dai_ops.h  hi3516_dma_ops.h
hispark_taurus/audio_drivers/soc/src/: hi3516_aiao_impl.c  hi3516_dai_adapter.c  hi3516_dai_ops.c  hi3516_dma_adapter.c  hi3516_dma_ops.c
hispark_taurus/audio_drivers/unittest/include/: hdf_audio_driver_test.h  hi3516_aiao_impl_test.h  hi3516_audio_driver_test.h  hi3516_codec_impl_test.h  hi3516_codec_ops_test.h  hi3516_common_func.h  hi3516_dai_ops_test.h  hi3516_dma_ops_test.h
hispark_taurus/audio_drivers/unittest/src/: hdf_audio_driver_test.c  hi3516_aiao_impl_test.c  hi3516_aiao_impl_test.cpp  hi3516_codec_impl_test.c  hi3516_codec_impl_test.cpp  hi3516_codec_ops_test.c  hi3516_codec_ops_test.cpp  hi3516_common_func.c  hi3516_dai_ops_test.c  hi3516_dai_ops_test.cpp  hi3516_dma_ops_test.c  hi3516_dma_ops_test.cpp
hispark_taurus/camera/: BUILD.gn
hispark_taurus/camera/demo/include/: project_camera_demo.h
hispark_taurus/camera/device_manager/: BUILD.gn
hispark_taurus/camera/device_manager/include/: imx335.h  imx600.h  project_hardware.h
hispark_taurus/camera/device_manager/src/: imx335.cpp  imx600.cpp
hispark_taurus/camera/driver_adapter/: BUILD.gn
hispark_taurus/camera/driver_adapter/include/: isys_object.h  ivenc_object.h  ivi_object.h  ivo_object.h  ivpss_object.h  mpi_adapter.h
hispark_taurus/camera/pipeline_core/: BUILD.gn
hispark_taurus/camera/pipeline_core/src/: ipp_algo_example.c
hispark_taurus/display_drivers/: Makefile  mipi_icn9700_st7701sn.c
hispark_taurus/linux/: BUILD.gn  config.gni  ohos.build
hispark_taurus/linux/distributedhardware/: BUILD.gn  distributed_hardware_components_cfg.json
hispark_taurus/linux/images/: BUILD.gn  system_image_conf.txt  userdata_image_conf.txt
hispark_taurus/linux/system/: BUILD.gn  Hi3516DV300-emmc-ramdiskImage.xml
hispark_taurus/linux/system/cfg/: BUILD.gn  init.Hi3516DV300.cfg
hispark_taurus/linux/system_hap/: BUILD.gn
hispark_taurus/linux/updater/: BUILD.gn  ohos_updater.its  updater_ramdisk_resource_config.ini
hispark_taurus/linux/updater/config/: fstab.Hi3516DV300  init.cfg
hispark_taurus/liteos_a/: BUILD.gn  config.gni
hispark_taurus/liteos_a/drivers/: BUILD.gn
hispark_taurus/uboot/: Makefile
hispark_taurus/uboot/secureboot_release/: Makefile  create_secure_boot.sh  rsa2048pem.sh  rsa4096pem.sh
hispark_taurus/uboot/secureboot_release/ddr_init/: Makefile
hispark_taurus/uboot/secureboot_release/ddr_init/boot/: Makefile  init_regs.c  lowlevel_init_v300.c
hispark_taurus/uboot/secureboot_release/ddr_init/drv/: Makefile  ddr_ddrc_v510.h  ddr_ddrc_v520.h  ddr_ddrt_t16.h  ddr_ddrt_t28.h  ddr_interface.h  ddr_phy_s40.h  ddr_phy_t12_v100.h  ddr_phy_t12_v101.h  ddr_phy_t16.h  ddr_phy_t28.h  ddr_training_boot.c  ddr_training_console.c  ddr_training_ctl.c  ddr_training_custom.c  ddr_training_custom.h  ddr_training_impl.c  ddr_training_impl.h  ddr_training_internal_config.h
hispark_taurus/uboot/secureboot_release/ddr_init/drv/cmd_bin/: Makefile  ddr_training_cmd.c  ddr_training_uart.c
hispark_taurus/uboot/secureboot_release/ddr_init/include/: barriers.h  platform.h  types.h
hispark_taurus/uboot/secureboot_release/ddr_init/include/asm/: sizes.h
(+26 files in other folders)
