# Copyright (C) 2021 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

cmd = "if [ -f $product_path/hdf_config/BUILD.gn ]; then echo true; else echo false; fi"
HAVE_PRODUCT_CONFIG =
    exec_script("//build/lite/run_shell_cmd.py", [ cmd ], "value")

group("liteos_a") {
  deps = [
    "board",
    "drivers",
    "//device/soc/hisilicon/hi3518ev300/mpp/module_init",
  ]
  if (HAVE_PRODUCT_CONFIG) {
    deps += [ "$product_path/hdf_config" ]
  } else {
    deps += [ "hdf_config" ]
  }
}

config("public") {
  configs = [
    "board:public",
    "drivers:public",
  ]
}
