# Copyright (C) 2022 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

import("//build/ohos.gni")

ohos_copy("image_conf") {
 sources = [
  "system_image_conf.txt",
  "userdata_image_conf.txt",
  "vendor_image_conf.txt",
 ]
 outputs = [ "${product_output_dir}/imagesconf/{{source_file_part}}" ]
}
