# Copyright (C) 2022 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

import("//build/ohos.gni")

group("system_files") {
  deps = [
    ":init.Hi3751V350.cfg",
    ":ohos_drv_mgr.cfg",
    ":partion_xml",
  ]
}

ohos_copy("partion_xml") {
  sources = [ "Hi3751V350-slaveboot-emmc.xml" ]
  outputs =
      [ "$root_build_dir/packages/phone/images/Hi3751V350-slaveboot-emmc.xml" ]
}

ohos_prebuilt_etc("ohos_drv_mgr.cfg") {
  source = "cfg/ohos_drv_mgr.cfg"
  part_name = "hisilicon_products"
  relative_install_dir = "init"
  install_enable = true
}

ohos_prebuilt_etc("init.Hi3751V350.cfg") {
  source = "cfg/init.Hi3751V350.cfg"
  part_name = "hisilicon_products"
  install_images = [ vendor_base_dir ]
  install_enable = true
}
