# Copyright (C) 2022 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

import("//build/ohos.gni")

group("updater_cfgs") {
  deps = [
    ":fstab",
    ":fstab.Hi3751V350",
    ":ohos.its",
  ]
}

ohos_copy("fstab") {
  sources = [ "cfg/fstab.Hi3751V350" ]
  outputs = [ "$root_build_dir/fstab.required" ]
}

ohos_copy("ohos.its") {
  sources = [ "ohos.its" ]
  outputs = [ "$root_build_dir/ohos.its" ]
}

ohos_prebuilt_etc("fstab.Hi3751V350") {
  source = "cfg/fstab.Hi3751V350"
  module_install_dir = "etc"
  install_images = [ vendor_base_dir ]
  part_name = "hisilicon_products"
}
