# Copyright (C) 2022 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

import("//build/ohos.gni")

group("updater_cfgs") {
  deps = [ ":fstab.Hi3751V350" ]
}

ohos_prebuilt_etc("fstab.Hi3751V350") {
  source = "cfg/fstab.Hi3751V350"
  module_install_dir = "etc"
  install_images = [ vendor_base_dir ]
  part_name = "hisilicon_products"
}
