# Copyright (c) Huawei Technologies Co., Ltd. 2021-2022. All rights reserved.
import("//drivers/peripheral/camera/hal/camera.gni")

config("device_manager_config") {
  visibility = [ ":*" ]

  cflags_cc = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-error",
    "-DGST_DISABLE_DEPRECATED",
    "-DHAVE_CONFIG_H",
    "-DCOLORSPACE=\"videoconvert\"",
    "-fno-strict-aliasing",
    "-Wno-sign-compare",
    "-Wno-builtin-requires-header",
    "-Wno-unused-variable",
    "-Wno-unused-label",
    "-Wno-implicit-function-declaration",
    "-Wno-format",
    "-Wno-int-conversion",
    "-Wno-unused-function",
    "-Wno-thread-safety-attributes",
    "-Wno-inconsistent-missing-override",
    "-fno-rtti",
    "-fno-exceptions",
    "-ffunction-sections",
    "-fdata-sections",
  ]
}

if (defined(ohos_lite)) {
  import("//build/ohos.gni")
  import("//drivers/hdf_core/adapter/uhdf/uhdf.gni")

  ohos_shared_library("camera_device_manager") {
    sources = [
      "$board_camera_path/device_manager/src/imx335.cpp",
      "$board_camera_path/device_manager/src/imx600.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/idevice_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/mpi_device_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/venc_controller.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/venc_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vi_controller.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vi_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vo_controller.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vo_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vpss_controller.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vpss_manager.cpp",
      "$camera_path/device_manager/src/icontroller.cpp",
      "$camera_path/device_manager/src/imanager.cpp",
      "$camera_path/device_manager/src/isensor.cpp",
    ]

    include_dirs = [
      "//base/hiviewdfx/interfaces/innerkits/libhilog/include",
      "$camera_path/include",
      "$camera_path/lite_os/metadata/include",
      "$camera_path/utils/event",
      "$camera_path/device_manager/include",
      "//commonlibrary/c_utils/base/include",
      "$board_camera_path/device_manager/include",
      "$camera_path/adapter/platform/mpp/src/device_manager/include",
      "//drivers/peripheral/camera/interfaces/metadata/include",
      "//drivers/hdf_core/framework/include/utils",
      "//drivers/hdf_core/adapter/uhdf2/osal/include",
      "$board_camera_path/driver_adapter/include",
      "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
    ]

    deps = [ "//drivers/peripheral/camera/interfaces/metadata:metadata" ]
    hispark_taurus_lib_path = "$board_camera_path/libs/liteos_a"

    outdir = rebase_path("$hispark_taurus_lib_path")

    ldflags = [ "-L$outdir" ]
    ldflags += [ "-ldriver_adapter.z" ]

    public_configs = [ ":device_manager_config" ]
    subsystem_name = "hdf"
    part_name = "drivers_peripheral_camera"
  }
} else {
  import("//build/ohos.gni")
  import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

  ohos_shared_library("camera_device_manager") {
    sources = [
      "$board_camera_path/device_manager/src/imx335.cpp",
      "$board_camera_path/device_manager/src/imx600.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/idevice_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/mpi_device_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/venc_controller.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/venc_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vi_controller.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vi_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vo_controller.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vo_manager.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vpss_controller.cpp",
      "$camera_path/adapter/platform/mpp/src/device_manager/vpss_manager.cpp",
      "$camera_path/device_manager/src/icontroller.cpp",
      "$camera_path/device_manager/src/imanager.cpp",
      "$camera_path/device_manager/src/isensor.cpp",
    ]

    include_dirs = [
      "$camera_path/include",
      "$camera_path/utils/event",
      "$camera_path/device_manager/include",
      "$board_camera_path/device_manager/include",
      "$camera_path/adapter/platform/mpp/src/device_manager/include",
      "$board_camera_path/driver_adapter/include",
      "//drivers/peripheral/camera/interfaces/metadata/include",
    ]

    deps = [ "//drivers/peripheral/camera/interfaces/metadata:metadata" ]

    hispark_taurus_lib_path = "$board_camera_path/libs/linux"

    outdir = rebase_path("$hispark_taurus_lib_path")
    ldflags = [ "-L$outdir" ]
    ldflags += [ "-ldriver_adapter.z" ]

    if (is_standard_system) {
      external_deps = [
        "c_utils:utils",
        "hdf_core:libhdf_utils",
        "hiviewdfx_hilog_native:libhilog",
      ]
    } else {
      external_deps = [ "hilog:libhilog" ]
    }

    public_configs = [ ":device_manager_config" ]
    install_images = [ chipset_base_dir ]
    subsystem_name = "hdf"
    part_name = "drivers_peripheral_camera"
  }
}
