# Copyright (c) Hisilicon Technologies Co., Ltd. 2022-2022. All rights reserved.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

config("bt_warnings") {
  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-switch",
    "-Wno-unused-function",
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
    "-Wno-implicit-function-declaration",
    "-Wno-incompatible-pointer-types",
  ]
}

group("rtkbt_group") {
  deps = [
    ":libbt_vendor",
    ":rtkbt.conf",
    ":rtl8723d_config",
    ":rtl8723d_fw",
  ]
}

ohos_shared_library("libbt_vendor") {
  output_name = "libbt_vendor"
  sources = [
    "code/libbt-vendor/src/bt_list.c",
    "code/libbt-vendor/src/bt_skbuff.c",
    "code/libbt-vendor/src/bt_vendor_rtk.c",
    "code/libbt-vendor/src/hardware.c",
    "code/libbt-vendor/src/hardware_uart.c",
    "code/libbt-vendor/src/hardware_usb.c",
    "code/libbt-vendor/src/hci_h5.c",
    "code/libbt-vendor/src/rtk_btservice.c",
    "code/libbt-vendor/src/rtk_btsnoop_net.c",
    "code/libbt-vendor/src/rtk_heartbeat.c",
    "code/libbt-vendor/src/rtk_parse.c",
    "code/libbt-vendor/src/rtk_poll.c",
    "code/libbt-vendor/src/rtk_socket.c",
    "code/libbt-vendor/src/upio.c",
    "code/libbt-vendor/src/userial_vendor.c",
  ]

  include_dirs = [
    "code/libbt-vendor/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/communication/bluetooth/services/bluetooth/hardware/include",
    "//drivers/peripheral/bluetooth/hdi/ohos/hardware/bt/v1_0/server/implement",
  ]

  cflags = []

  configs = [ ":bt_warnings" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  install_enable = true
  install_images = [ "system" ]
  module_install_dir = "lib"

  part_name = "hisilicon_products"
}

ohos_prebuilt_etc("rtl8723d_config") {
  source = "Firmware/BT/rtl8723d_config"
  install_images = [ "vendor" ]
  module_install_dir = "firmware"
  part_name = "hisilicon_products"
}

ohos_prebuilt_etc("rtl8723d_fw") {
  source = "Firmware/BT/rtl8723d_fw"
  install_images = [ "vendor" ]
  module_install_dir = "firmware"
  part_name = "hisilicon_products"
}

ohos_prebuilt_etc("rtkbt.conf") {
  source = "vendor/etc/bluetooth/rtkbt.conf"
  install_images = [ "vendor" ]
  relative_install_dir = "bluetooth"
  part_name = "hisilicon_products"
}
