# Copyright (c) Hisilicon Technologies Co., Ltd. 2022-2022. All rights reserved.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

config("bt_warnings") {
  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-switch",
    "-Wno-unused-function",
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
    "-Wno-implicit-function-declaration",
    "-Wno-incompatible-pointer-types",
  ]
}

group("rtkbt_group") {
  deps = [
    ":rtkbt.conf",
    ":rtl8723d_config",
    ":rtl8723d_fw",
  ]
}

ohos_prebuilt_etc("rtl8723d_config") {
  source = "Firmware/BT/rtl8723d_config"
  install_images = [ "vendor" ]
  module_install_dir = "firmware"
  part_name = "hisilicon_products"
}

ohos_prebuilt_etc("rtl8723d_fw") {
  source = "Firmware/BT/rtl8723d_fw"
  install_images = [ "vendor" ]
  module_install_dir = "firmware"
  part_name = "hisilicon_products"
}

ohos_prebuilt_etc("rtkbt.conf") {
  source = "vendor/etc/bluetooth/rtkbt.conf"
  install_images = [ "vendor" ]
  relative_install_dir = "bluetooth"
  part_name = "hisilicon_products"
}
